<resources>
    <string name="app_name">Streakr</string>

    <!-- Labels for different app features [CHAR LIMIT=TBD] -->
    <string name="feature_goals_habits">Goals/Habits</string>
    <string name="feature_reminders">Reminders</string>
    <string name="feature_settings">Settings</string>
    <string name="primary_settings">Settings</string>
    <string name="title_activity_goals_habits_feature">GoalsHabitsFeatureActivity</string>

    <!-- Goal editor activity strings [CHAR LIMIT=TBD] -->
    <string name="goal_name">Goal Name</string>
    <string name="goal_name_hint">Name</string>
    <string name="goal_type">Goal Type</string>
    <string name="goal_type_hint">Type</string>
    <string name="goal_start_date">Start Date</string>
    <string name="goal_start_date_button">Select Date</string>
    <string name="goal_end_date_button">Select Date</string>
    <string name="goal_end_date">Target End Date</string>
    <string name="add_goal_activity_title">Add a Goal</string>
    <string name="edit_goal_activity_title">Edit a Goal</string>
    <string name="save_goal_button">Save Goal</string>
    <string name="add_goal_button">Add Goal</string>
    <string name="delete_goal_button">Delete Goal</string>
    <string name="notes_button">Streak Notes</string>
    <string name="habit_name">Habit Name</string>
    <string name="habit_type">Habit Type</string>
    <string name="add_habit_activity_title">Add a Habit</string>
    <string name="edit_habit_activity_title">Edit a Habit</string>
    <string name="save_habit_button">Save Habit</string>
    <string name="add_habit_button">Add Habit</string>
    <string name="delete_habit_button">Delete Habit</string>
    <string name="historical_streaks">Historical Streaks</string>
    <string name="view_streak_details"><u>View Streak History</u></string>
    <string name="failure_date">Failure Date</string>


    <!-- Goal type spinner dropdown strings [CHAR LIMIT=TBD] -->
    <string name="goal_type_other">Other</string>
    <string name="goal_type_fitness">Fitness</string>
    <string name="goal_type_read">Read</string>

    <!-- Dialogs [CHAR LIMIT=TBD] -->
    <string name="reset_streak_header">Reset Streak?</string>
    <string name="reset_streak_message">Resetting your streak will clear your current streak dates.  Historical streak information will be saved.</string>
    <string name="reset_streak_cancel_button">Cancel</string>
    <string name="reset_streak_button">Reset Streak</string>
    <string name="reset_streak_fail_date_button">Choose Fail Date</string>

    <string name="delete_goal_header">Delete Goal?</string>
    <string name="delete_habit_header">Delete Habit?</string>
    <string name="delete_goal_message">Deletion Will Be Permanent</string>
    <string name="delete_goal_cancel_button">Cancel</string>
    <string name="delete_goal_delete_button">Delete</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="complete_goal">Complete Goal?</string>
    <string name="complete_habit">Complete Habit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restart_goal">Restart Goal?</string>
    <string name="restart_habit">Restart Habit?</string>


    <!-- Toast Messages [CHAR LIMIT=TBD] -->
    <string name="streak_reset">Streak Reset</string>
    <string name="goal_inserted">Goal Inserted</string>
    <string name="habit_inserted">Habit Inserted</string>
    <string name="goal_updated">Goal Updated</string>
    <string name="habit_updated">Habit Updated</string>
    <string name="goal_deleted">Goal Deleted</string>
    <string name="habit_deleted">Habit Deleted</string>
    <string name="note_updated">Note Updated</string>
    <string name="end_date_after_start_date">End Date must be after Start Date</string>
    <string name="fail_date_after_start_date">Fail Date must be after Start Date</string>
    <string name="all_fields_populated">All Fields Must Be Populated</string>
    <string name="date_fields_populated">Date Fields Must Be Populated</string>
    <string name="please_wait_data_load">Please Wait for Data to Load</string>
    <string name="billing_connection_failure">Billing connection not established. Connect to a network and retry.</string>

    <!-- Streak Details Strings [CHAR LIMIT=TBD] -->
    <string name="streak_details">Streak Details</string>
    <string name="average_streak_length">Average Streak Length</string>
    <string name="longest_streak_length">Longest Streak Length</string>
    <string name="historical_streaks_details">Historical Streaks:</string>
    <string name="streak_trend">Streak Trend</string>

    <!-- Settings Keys, Labels and Values [CHAR LIMIT=TBD] -->
    <string name="settings_theme_key">theme key</string>
    <string name="settings_theme_title">Select Theme</string>
    <string name="settings_theme_label_default">Default</string>
    <string name="settings_theme_value_default">default theme</string>
    <string name="settings_theme_label_pink">Pink</string>
    <string name="settings_theme_value_pink">pink theme</string>
    <string name="settings_theme_label_blue">Blue</string>
    <string name="settings_theme_value_blue">blue theme</string>
    <string name="settings_theme_label_red">Red</string>
    <string name="settings_theme_value_red">red theme</string>
    <string name="settings_theme_label_black">Dark</string>
    <string name="settings_theme_value_black">black theme</string>
    <string name="pref_show_completed_goals_key" translatable="false">show_completed_goals</string>
    <string name="pref_show_completed_goals_title">Show Completed Goals</string>
    <string name="pref_libraries">Libraries/Licenses</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_remove_ads">Remove Advertisements</string>
    <string name="pref_ad_removal_purchased">Ad Removal Purchased</string>
    <string name="pref_remove_ads_key">adFree</string>
    <string name="pref_total_goals_key">total number of goals</string>

    <!-- Tags [CHAR LIMIT=TBD] -->
    <string name="wide_screen">wide screen</string>
    <string name="regular_screen">regular screen</string>

    <!-- Content Descriptions for Accessibility [CHAR LIMIT=TBD] -->
    <string name="cd_start_date">start date picker</string>
    <string name="cd_end_date">end date picker</string>
    <string name="cd_notes">notes button</string>
    <string name="cd_save">save button</string>
    <string name="cd_delete">delete button</string>
    <string name="cd_reset">reset button</string>
    <string name="cd_complete">complete goal or habit button</string>
    <string name="cd_settings">settings button</string>
    <string name="cd_add_goal">add goal button</string>
    <string name="cd_add_habit">add habit button</string>
    <string name="cd_streak_graph">graph of streak progress</string>
    <string name="cd_goal_icon">goal or habit icon</string>

    <!-- Licenses [CHAR LIMIT=TBD] -->
    <string name="libraries_used">Libraries Used</string>
    <string name="graph_view">GraphView</string>
    <string name="graph_view_license">Copyright 2016 Jonas Gehring

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at \n \n

    http://www.apache.org/licenses/LICENSE-2.0 \n \n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <!-- Ads Strings [CHAR LIMIT=TBD] -->
    <string name="banner_ad_unit_id_real">ca-app-pub-9852829648923660/9713600466</string>
    <string name="interstitial_ad_unit_id_real">ca-app-pub-9852829648923660/7634232034</string>

</resources>
